CRUD-Methoden für Note in EditorImpl fertig
Die einfachen CRUD-Methoden für Note sind nun fertig implementiert,
außerdem kleine Änderungen am .gitignore-file, um kein Chaos zu
verursachen

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # gwt caches and compiled units #
 war/gwt_bree/
 gwt-unitCache/
+war/classes/
 
 # boilerplate generated classes #
 .apt_generated/
