--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -7,13 +7,13 @@
 
   <!-- Servlets -->
   <servlet>
-    <servlet-name>greetServlet</servlet-name>
-    <servlet-class>de.hdm_stuttgart.huber.itprojekt.server.GreetingServiceImpl</servlet-class>
+    <servlet-name>testServlet</servlet-name>
+    <servlet-class>de.hdm_stuttgart.huber.itprojekt.server.EditorImpl</servlet-class>
   </servlet>
   
   <servlet-mapping>
-    <servlet-name>greetServlet</servlet-name>
-    <url-pattern>/it_projekt/greet</url-pattern>
+    <servlet-name>testServlet</servlet-name>
+    <url-pattern>/it_projekt/testEditor</url-pattern>
   </servlet-mapping>
   
   <!-- Default page to serve -->
