Massive Bugfixes, aufräumen Gitindex
1. Schwere Bugs in verschiedenen Klassen, eclipse wollte nicht mal mehr
den Java-Teil kompilieren - Bugs entweder behoben oder auskommentiert,
insbesondere die DomainObjects und die Mapper brauchen nochmal etwas
aufmerksamkeit.

2. Mehrere .class-Dateien usw. waren auf dem git-Index. Habe diese
gelöscht, da Output und somit nicht relevant. Habe außerdem .iml usw.
gestrichen, DataGrip neigt dazu, die anzulegen

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -10,13 +10,21 @@
     <servlet-name>testServlet</servlet-name>
     <servlet-class>de.hdm_stuttgart.huber.itprojekt.server.EditorImpl</servlet-class>
   </servlet>
-  
-  <servlet-mapping>
+    <servlet>
+        <servlet-name>de.hdm_stuttgart.huber.itprojekt.Report Editor</servlet-name>
+        <servlet-class>de.hdm_stuttgart.huber.itprojekt.server.EditorImpl</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
     <servlet-name>testServlet</servlet-name>
     <url-pattern>/it_projekt/testEditor</url-pattern>
   </servlet-mapping>
-  
-  <!-- Default page to serve -->
+    <servlet-mapping>
+        <servlet-name>de.hdm_stuttgart.huber.itprojekt.Report Editor</servlet-name>
+        <url-pattern>/ReportGenerator/testEditor</url-pattern>
+    </servlet-mapping>
+
+    <!-- Default page to serve -->
   <welcome-file-list>
     <welcome-file>IT_Projekt.html</welcome-file>
     <welcome-file>Report.html</welcome-file>
