--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -18,7 +18,7 @@
 
     <servlet>
         <servlet-name>sharedServices</servlet-name>
-        <servlet-class>de.hdm_stuttgart.huber.itprojekt.server.NoteMeSharedServiceImpl</servlet-class>
+        <servlet-class>de.hdm_stuttgart.huber.itprojekt.server.SharedServicesImpl</servlet-class>
     </servlet>
 
     <servlet-mapping>
@@ -33,7 +33,7 @@
     
     <servlet-mapping>
         <servlet-name>sharedServices</servlet-name>
-        <url-pattern>/ReportGenerator/NoteMeSharedService</url-pattern>
+        <url-pattern>/it_projekt/login</url-pattern>
     </servlet-mapping>
 
     <!-- Default page to serve -->
