CherryPick: Freigaben serverseitig fertiggestellt
Freigaben serverseitig fertiggestellt

Funktioniert wie folgt:
(1) Mit entsprechenden Methoden aus dem Editor-Servlet können alle Notizen
oder Notizbücher, die für den aktuellen User freigegeben werden, abgerufen
werden. Diese enthalten dann jeweils ein Permission-Objekt.

(2) Dieses Permission-Objekt kann mit der enthaltenen Methode
isUserAllowedTo() jederzeit Auskunft darüber geben, ob der aktuelle User
gewisse Operationen, wie schreiben oder löschen durchführen darf.

(3) Das Interface Shareable: Hiermit werden grundsätzlich teilbare
Objekte, aktuell Note und NoteBook, gekennzeichnet, bzw. ist die
Implementation des Interface erforderlich, damit die Applikationslogik
teilbare Objekte auch entsprechend in der Datenbank ablegen kann.

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -35,6 +35,16 @@
         <servlet-name>sharedServices</servlet-name>
         <url-pattern>/it_projekt/login</url-pattern>
     </servlet-mapping>
+    
+    <servlet>
+    	<servlet-name>PermissionService</servlet-name>
+    	<servlet-class>de.hdm_stuttgart.huber.itprojekt.server.PermissionServiceImpl</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+    	<servlet-name>PermissionService</servlet-name>
+    	<url-pattern>/itprojekt/permsvc</url-pattern>
+    </servlet-mapping>
 
     <!-- Default page to serve -->
     <welcome-file-list>
