Teilweise initial commit, verbesserte gwt.xml

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ war/classes/h
 # more caches and things from deploy #
 war/WEB-INF/deploy/
 war/WEB-INF/classes/
+war/ReportGenerator/
 
 #compilation logs
 .gwt/
