--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -20,6 +20,16 @@
         <servlet-name>sharedServices</servlet-name>
         <servlet-class>de.hdm_stuttgart.huber.itprojekt.server.SharedServicesImpl</servlet-class>
     </servlet>
+    
+    <servlet>
+    	<servlet-name>ReportGenerator</servlet-name>
+    	<servlet-class>de.hdm_stuttgart.huber.itprojekt.server.ReportGeneratorImpl</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+    	<servlet-name>ReportGenerator</servlet-name>
+    	<url-pattern>ReportGenerator/generator</url-pattern>
+    </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>testServlet</servlet-name>
