Grundsätzlicher Arbeitsablauf festgeschrieben
Was passiert: Eine Boilerplate-HTML-Seite enthält eine Betaversion des
Buttons, der aus einem HTML-Form besteht, welches jedoch nur den
Submit-Button enthält. Durch den Submit wird das entsprechende Servlet auf
dem laufenden AppEngine-Server in Gang gesetzt und an den Client
weitergeleitet. Dieser gibt zunächst die Hostadresse rudimentär aus.

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -20,6 +20,16 @@
         <servlet-name>sharedServices</servlet-name>
         <servlet-class>de.hdm_stuttgart.huber.itprojekt.server.SharedServicesImpl</servlet-class>
     </servlet>
+    
+    <servlet>
+    	<servlet-name>ExternalButtonListener</servlet-name>
+    	<servlet-class>de.hdm_stuttgart.huber.itprojekt.server.ExternalButtonListener</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+    	<servlet-name>ExternalButtonListener</servlet-name>
+    	<url-pattern>/it_projekt/listener</url-pattern>
+    </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>testServlet</servlet-name>
